# numerical-linalg-for-ml

./: .gitignore  README.md  design.md  plan-01-scaffolding-and-krylov.md  pyproject.toml
data/checkpoints/: step_0.pt  step_10.pt  step_100.pt  step_500.pt
notebooks/: 01_krylov.ipynb  02_randomized.ipynb  03_estimation.ipynb  04_capstone.ipynb  _run_with_solutions.py  _run_with_solutions_02.py  _run_with_solutions_03.py  _run_with_solutions_04.py  build_01.py  build_02.py  build_03.py  build_04.py
scripts/: render_for_blog.py  train_capstone.py
solutions/: _01_krylov.py  _02_randomized.py  _03_estimation.py
src/: data.py  plotting.py  tests.py  tiny_models.py
tests/: test_data.py  test_estimation.py  test_hvp.py  test_lanczos.py  test_models.py  test_power.py  test_randomized.py
