[project]
name = "numerical-linalg-for-ml"
version = "0.1.0"
description = "Hands-on numerical linear algebra tutorial for ML researchers"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "nbformat>=5.10",
    "jupyterlab>=4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["."]
